nifi/nifi-single-node/nifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi  # Name of the Deployment itself
  namespace: default  # Use the default namespace
spec:
  selector:
    matchLabels:
      app: nifi # The label used for the pods deployed by this template
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
        - name: nifi
          image: apache/nifi:1.14.0
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8443 # Port that the container can be reached at given that Nifi uses this port for the Web UI
          env:  # Environment variables to be used by the container
            - name: SINGLE_USER_CREDENTIALS_USERNAME
              value: "admin"
            - name: SINGLE_USER_CREDENTIALS_PASSWORD
              valueFrom:  # You used valueFrom if you need to retrieve from a secret
                secretKeyRef:
                  name: credentials # Name of secret
                  key: nifi_password  # Name of value pair in secret
