nifi/nifi-single-node/nifi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-svc
  namespace: default
spec:
  selector:
    app: nifi # Service will be tied to pods with this label
  ports:
    - port: 8443  # How other objects in cluster can access this speficied services port.
      targetPort: 8443 # The port that the target Pod is listening on.
